--- a/package.json
+++ b/package.json
@@ -8,16 +8,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@privy-io/react-auth": "^3.3.0",
+    "@privy-io/wagmi": "^2.0.1",
+    "@solana-program/memo": "^0.9.0",
+    "@solana-program/system": "^0.9.0",
+    "@solana-program/token": "^0.7.0",
+    "@solana/kit": "^4.0.0",
+    "@solana/web3.js": "^1.98.4",
+    "bs58": "^6.0.0",
+    "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.5"
+    "viem": "^2.38.2",
+    "wagmi": "^2.18.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
